components/policies/pod-security-standards/baseline/restrict-apparmor-types/policy.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-apparmor-types
  labels:
    app.kubernetes.io/name: restrict-apparmor-types
    app.kubernetes.io/component: pod-security-standards-baseline
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:    [""]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["pods"]
        scope:        "Namespaced"
      - apiGroups:    ["apps"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["daemonsets", "deployments", "statefulsets"]
        scope:        "Namespaced"
      - apiGroups:    ["batch"]
        apiVersions:  ["v1"]
        operations:   ["CREATE", "UPDATE"]
        resources:    ["cronjobs", "jobs"]
        scope:        "Namespaced"
  variables:
    - expression: "['RuntimeDefault', 'Localhost']"
      name: allowedAppArmorTypes
    - expression:
        object.spec.?template.?spec.?containers.orValue([]) +
        object.spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?template.?spec.?ephemeralContainers.orValue([])
      name: controllerContainer
    - expression:
        object.spec.?jobTemplate.?spec.?template.?spec.?containers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?initContainers.orValue([]) +
        object.spec.?jobTemplate.?spec.?template.?spec.?ephemeralContainers.orValue([])
      name: cronJobContainers
    - expression:
        object.spec.?containers.orValue([]) +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])
      name: podContainers
    - expression: variables.controllerContainer + variables.cronJobContainers + variables.podContainers
      name: allContainers
  validations:
    - expression:
        variables.allContainers.all(container,
          container.?securityContext.?appArmorProfile.?type.orValue('Localhost') in variables.allowedAppArmorTypes)
      messageExpression: "'Any AppArmor type beyond the allowed list (' + variables.allowedAppArmorTypes.join(', ') + ') are forbidden.'"
      reason: Invalid
    - expression:
        object.spec.?securityContext.?appArmorProfile.?type.orValue('Localhost') in variables.allowedAppArmorTypes
      messageExpression: "'Any AppArmor type beyond the allowed list (' + variables.allowedAppArmorTypes.join(', ') + ') are forbidden.'"
      reason: Invalid
    - expression:
        object.spec.?template.?spec.?securityContext.?appArmorProfile.?type.orValue('Localhost') in variables.allowedAppArmorTypes
      messageExpression: "'Any AppArmor type beyond the allowed list (' + variables.allowedAppArmorTypes.join(', ') + ') are forbidden.'"
      reason: Invalid
    - expression:
        object.spec.?jobTemplate.?spec.?template.?spec.?securityContext.?appArmorProfile.?type.orValue('Localhost') in variables.allowedAppArmorTypes
      messageExpression: "'Any AppArmor type beyond the allowed list (' + variables.allowedAppArmorTypes.join(', ') + ') are forbidden.'"
      reason: Invalid
  auditAnnotations:
    - key: name
      valueExpression: string(object.metadata.name)
